Model training phase 1

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,16 @@ data/building_damage/train
 data/building_damage/test
 data/flood/train
 data/flood/test
-data/flood_sar/train
-data/flood_sar/test
+data/flood_sar/
+data/flood_sar/
+notebooks/venv
+data/
+
+*.tif
+*.tiff
+*.pth
+*.pt
+*.ckpt
+*.h5
+*.pkl
+*.pickle
