--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,62 +2,49 @@ affine==2.4.0
 albucore==0.0.24
 albumentations==2.0.8
 annotated-types==0.7.0
+anyio==4.11.0
 attrs==25.4.0
 certifi==2025.10.5
 charset-normalizer==3.4.3
-click==8.1.8
+click==8.3.0
 click-plugins==1.1.1.2
 cligj==0.7.2
-contourpy==1.3.0
-cycler==0.12.1
-eval_type_backport==0.2.2
-filelock==3.19.1
-fonttools==4.60.1
+fastapi==0.119.0
+filelock==3.20.0
 fsspec==2025.9.0
+h11==0.16.0
 hf-xet==1.1.10
 huggingface-hub==0.35.3
 idna==3.11
-imageio==2.37.0
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
 Jinja2==3.1.6
-joblib==1.5.2
-kiwisolver==1.4.7
-lazy_loader==0.4
 MarkupSafe==3.0.3
-matplotlib==3.9.4
 mpmath==1.3.0
-networkx==3.2.1
-numpy==2.0.2
+networkx==3.5
+numpy==2.2.6
 opencv-python-headless==4.12.0.88
 packaging==25.0
-pandas==2.3.3
 pillow==11.3.0
 pydantic==2.12.0
 pydantic_core==2.41.1
 pyparsing==3.2.5
-python-dateutil==2.9.0.post0
-pytz==2025.2
+python-multipart==0.0.20
 PyYAML==6.0.3
 rasterio==1.4.3
 requests==2.32.5
 safetensors==0.6.2
-scikit-image==0.24.0
-scikit-learn==1.6.1
-scipy==1.13.1
+scipy==1.16.2
 segmentation_models_pytorch==0.5.0
+setuptools==80.9.0
 simsimd==6.5.3
-six==1.17.0
+sniffio==1.3.1
+starlette==0.48.0
 stringzilla==4.2.1
 sympy==1.14.0
-threadpoolctl==3.6.0
-tifffile==2024.8.30
 timm==1.0.20
 torch==2.8.0
 torchvision==0.23.0
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
 urllib3==2.5.0
-zipp==3.23.0
+uvicorn==0.37.0
