--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "axios": "^1.6.2",
+    "georaster": "^1.6.0",
+    "georaster-layer-for-leaflet": "^3.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
